# WTL4MinGW

./: CMakeLists.txt
atlport/include/: crtdbg.h
src/: CMakeLists.txt
src/atlport/include/: atlbase.h
src/stdext/include/stdext/: Basic.h
